# microcli

./: .gitignore  COPYING  COPYING.md  Cargo.toml  README.md
bright/: Cargo.toml  README.md
bright/src/: main.rs  operation.rs
brightcli/: Cargo.toml
brightcli/src/: main.rs  minmaxerror.rs  operation.rs  paramerror.rs
bundler/: README.md  archlinux.nu  centos.nu  debian.nu  macos.nu  windows.nu
dockermon/: Makefile  README.md  call-docker  go.mod  go.sum  main.go
dockermon/mon/: trayicon.go
gitbranch/: Cargo.toml  README.md
gitbranch/src/: main.rs
i3quitdialog/: Cargo.toml  README.md
i3quitdialog/src/: cancelbt.rs  exitbt.rs  haltbt.rs  main.rs  rebootbt.rs  resources.rs  users.rs
kodumaro-http-cli/: Cargo.toml  README.md
kodumaro-http-cli/src/: config.rs  lib.rs  output_format.rs  styles.rs
kodumaro-http-cli/src/cli/: cli_bool.rs  mod.rs  param.rs  util.rs
kodumaro-trim/: Cargo.toml  README.md
kodumaro-trim/src/: lib.rs
kodumaro-uuid-cli/: Cargo.toml  README.md
kodumaro-uuid-cli/src/: errors.rs  lib.rs
lidmonitor/: Cargo.toml  README.md
lidwatch/: Cargo.toml  README.md
lidwatch/src/: main.rs  notify.rs  paramerror.rs
main/: Cargo.toml
main/src/: lib.rs
nubrew/: README.md  archlinux.nu  centos.nu  debian.nu  windows.nu
powersupplywatch/: Cargo.toml  README.md
powersupplywatch/src/: error.rs  main.rs  params.rs
src/: lib.rs
stcalc/: Cargo.toml  README.md  hello.txt
stcalc/src/: main.rs  stack.rs
