[workspace]

resolver = "1"

members = [
    "main",
    "brightcli",
    "gitbranch",
    "i3quitdialog",
    "kodumaro-trim",
    "kodumaro-uuid-cli",
    "lidwatch",
    "powersupplywatch",
    "stcalc",
]

[profile.release]
opt-level     = "s"
codegen-units = 1
panic = "abort"
debug = false
lto   = true
rpath = false
strip = true
