[package]
name        = "brightcli"
version     = "0.1.0"
authors     = ["Rodrigo Cacilhας <montegasppa@cacilhas.info"]
license     = "3-Clause BSD License"
readme      = "README.md"
homepage    = "https://github.com/cacilhas/microcli/tree/master/bright"
repository  = "https://github.com/cacilhas/microcli/tree/master/bright"
keywords    = ["cli", "brightness", "linux"]
category    = "command-line-utilities"
description = "Util to change monitor brightness."
edition     = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
