[package]
name        = "brightcli"
version     = "0.1.4"
authors     = ["Rodrigo Montegasppα Cacilhας <montegasppa@cacilhas.info"]
license     = "BSD-3-Clause"
readme      = "README.md"
homepage    = "https://github.com/cacilhas/microcli/tree/master/bright"
repository  = "https://github.com/cacilhas/microcli/tree/master/bright"
keywords    = ["cli", "brightness", "linux"]
category    = "command-line-utilities"
description = "Util to change monitor brightness."
edition     = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
debug = false
rpath = false
strip = true

[dependencies]
