[package]
name        = "brightcli"
version     = "1.0.1"
authors     = ["Rodrigo Montegasppα Cacilhας <montegasppa@cacilhas.info"]
license     = "BSD-3-Clause"
readme      = "README.md"
homepage    = "https://crates.io/crates/brightcli"
repository  = "https://github.com/cacilhas/microcli/tree/master/brightcli"
keywords    = ["cli", "brightness", "linux"]
description = "Util to change monitor brightness."
edition     = "2021"

[dependencies]
anyhow = "1.0"
