[package]
name        = "gitbranch"
version     = "0.1.5"
authors     = ["Rodrigo Cacilhας <montegasppa@cacilhas.info"]
license     = "BSD-3-Clause"
readme      = "README.md"
homepage    = "https://github.com/cacilhas/microcli/tree/master/gitbranch"
repository  = "https://github.com/cacilhas/microcli/tree/master/gitbranch"
keywords    = ["cli", "git"]
category    = "command-line-utilities"
description = "It simply shows current branch name - or nothing if it isn’t a git repo."
edition     = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
debug = false
rpath = false
strip = true

[dependencies]
git2 = "0.16.1"
