[package]
name        = "gitbranch"
version     = "1.0.1"
authors     = ["Rodrigo Cacilhας <montegasppa@cacilhas.info"]
license     = "BSD-3-Clause"
readme      = "README.md"
homepage    = "https://crates.io/crates/gitbranch"
repository  = "https://github.com/cacilhas/microcli/tree/master/gitbranch"
keywords    = ["cli", "git"]
categories  = ["command-line-interface"]
description = "It simply shows current branch name - or nothing if it isn’t a git repo."
edition     = "2021"

[dependencies]
git2 = "0.18"
