[package]
name        = "i3quitdialog"
version     = "0.1.14"
authors     = ["Rodrigo Cacilhας <montegasppa@cacilhas.info"]
license     = "BSD-3-Clause"
readme      = "README.md"
homepage    = "https://github.com/cacilhas/microcli/tree/master/i3quitdialog"
repository  = "https://github.com/cacilhas/microcli/tree/master/i3quitdialog"
keywords    = ["gui", "i3wm", "linux"]
category    = "gui"
description = "A simple quit dialog for i3wm."
edition     = "2021"

[dependencies]
eframe = "0.21"
hex = "0.4"
i3_ipc = "0.16"
users = "0.11"
