[package]
name        = "i3quitdialog"
version     = "1.0.0"
authors     = ["Rodrigo Cacilhας <montegasppa@cacilhas.cc"]
license     = "BSD-3-Clause"
readme      = "README.md"
homepage    = "https://crates.io/crates/i3quitdialog"
repository  = "https://github.com/cacilhas/microcli/tree/master/i3quitdialog"
keywords    = ["gui", "i3wm", "linux"]
description = "A simple quit dialog for i3wm."
edition     = "2021"

[dependencies]
eframe = "0.22"
hex = "0.4"
i3_ipc = "0.16"
static_init = "1.0"
users = "0.11"
