[package]
name        = "kodumaro-http-cli"
version     = "0.5.0"
authors     = ["Rodrigo Montegasppα Cacilhας <montegasppa@cacilhas.info>"]
license     = "BSD-3-Clause"
readme      = "README.md"
homepage    = "https://github.com/cacilhas/kodumaro-http-cli"
repository  = "https://github.com/cacilhas/kodumaro-http-cli"
keywords    = ["cli", "http"]
description = "Kodumaro HTTP CLI inspired by HTTPie"
edition     = "2021"

[dependencies]
base64 = "0.22"
color-eyre = "0.6"
crossterm = "0.28"
eyre = "0.6"
regex = "1.11"
serde_json = "1.0"
syntect = "5.2"

[dependencies.clap]
version = "4.5"
features = ["color", "env", "help", "std", "suggestions", "usage", "derive"]

[dependencies.reqwest]
version = "0.12.8"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.40.0"
features = ["full"]

[[bin]]
name = "http"
path = "src/bin/http.rs"
