[package]
name        = "lidwatch"
version     = "0.1.5"
authors     = ["Rodrigo Cacilhας <montegasppa@cacilhas.info"]
license     = "BSD-3-Clause"
readme      = "README.md"
homepage    = "https://github.com/cacilhas/microcli/tree/master/lidwatch"
repository  = "https://github.com/cacilhas/microcli/tree/master/lidwatch"
keywords    = ["cli", "monitor", "linux", "lid"]
description = "Util to watch LID switching."
edition     = "2021"

[dependencies]
evdev = "0.12.1"
