[package]
name        = "lidwatch"
version     = "0.1.7"
authors     = ["Rodrigo Cacilhας <montegasppa@cacilhas.info"]
license     = "BSD-3-Clause"
readme      = "README.md"
homepage    = "https://crates.io/crates/lidwatch"
repository  = "https://github.com/cacilhas/microcli/tree/master/lidwatch"
keywords    = ["cli", "monitor", "linux", "lid"]
description = "Util to watch LID switching."
edition     = "2021"

[dependencies]
anyhow = "1.0"
evdev = "0.12"
thiserror = "1.0"
