[package]
name        = "lidwatch"
version     = "1.0.1"
authors     = ["Rodrigo Cacilhας <montegasppa@cacilhas.cc"]
license     = "BSD-3-Clause"
readme      = "README.md"
homepage    = "https://crates.io/crates/lidwatch"
repository  = "https://github.com/cacilhas/microcli/tree/master/lidwatch"
keywords    = ["cli", "monitor", "linux", "lid"]
categories  = ["command-line-interface"]
description = "Util to watch LID switching."
edition     = "2021"

[dependencies]
evdev = "0.12"
notify-rust = "4.11"
