[package]
name        = "microcli"
version     = "0.1.7"
authors     = ["Rodrigo Montegasppα Cacilhας <montegasppa@cacilhas.info"]
license     = "BSD-3-Clause"
readme      = "../README.md"
homepage    = "https://github.com/cacilhas/microcli"
repository  = "https://github.com/cacilhas/microcli"
keywords    = ["cli", "linux"]
description = "Bunch of random unrelated CLI tools."
edition     = "2021"

[dependencies]
