[package]
name        = "microcli"
version     = "1.0.3"
authors     = ["Rodrigo Montegasppα Cacilhας <montegasppa@cacilhas.cc"]
license     = "BSD-3-Clause"
readme      = "../README.md"
homepage    = "https://crates.io/crates/microcli"
repository  = "https://github.com/cacilhas/microcli"
keywords    = ["cli", "linux"]
description = "Bunch of random unrelated CLI tools."
edition     = "2021"

[dependencies]
