[package]
name        = "powersupplywatch"
version     = "1.0.4"
authors     = ["Rodrigo Cacilhας <montegasppa@cacilhas.info"]
license     = "BSD-3-Clause"
readme      = "README.md"
homepage    = "https://crates.io/crates/powersupplywatch"
repository  = "https://github.com/cacilhas/microcli/tree/master/powersupplywatch"
keywords    = ["cli", "monitor", "linux", "powersupply"]
description = "Util to watch power supply."
edition     = "2021"

[dependencies]
inotify = "0.10"
structopt = "0.3"
