[package]
name        = "stcalc"
version     = "1.0.1"
authors     = ["Rodrigo Montegasppα Cacilhας <montegasppa@cacilhas.info"]
license     = "BSD-3-Clause"
readme      = "README.md"
homepage    = "https://crates.io/crates/stcalc"
repository  = "https://github.com/cacilhas/microcli/tree/master/stcalc"
keywords    = ["cli", "calculator", "interpreter"]
description = "Stack calculator."
edition     = "2021"

[dependencies]
