[package]
name        = "stcalc"
version     = "1.0.1"
authors     = ["Rodrigo Montegasppα Cacilhας <montegasppa@cacilhas.cc"]
license     = "BSD-3-Clause"
readme      = "README.md"
homepage    = "https://crates.io/crates/stcalc"
repository  = "https://github.com/cacilhas/microcli/tree/master/stcalc"
keywords    = ["cli", "calculator", "interpreter"]
categories  = ["command-line-interface"]
description = "Stack calculator."
edition     = "2021"

[dependencies]
